@@ -44,6 +44,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * When a page doesn't exist, the tab should say "create", not "edit"
 * (bug 12882) Added a span with class "patrollink" arround "Mark as patrolled"
   link on diffs
+* Magic word formatnum can now take raw suffix to undo formatting
 
 === Bug fixes in 1.13 ===
 
